--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "js-to-ts",
+  "private": true,
+  "name": "{{project name}}",
   "version": "0.0.1",
-  "description": "Transpiles JavaScript projects into TypeScript",
+  "description": "{{project description}}",
+  "keywords": [],
+  "homepage": "https://github.com/cspotcode/{{repository name}}",
+  "bugs": "https://github.com/cspotcode/{{repository name}}/issues",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/cspotcode/{{repository name}}.git"
+  },
   "main": "index.js",
   "typings": "index.d.ts",
-  "bin": {
-    "js-to-ts": "bin/cli.js"
-  },
+  "bin": "bin/cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
