--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,12 @@
 {
-  "compileOnSave": true,
-  "compilerOptions": {
-    "target": "es6",
-    "rootDir": "src",
-    "outDir": "bin",
-    "sourceMap": true,
-    "declaration": true,
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "stripInternal": true,
-    "noEmitHelpers": true,
-    "pretty": true
-  },
-  "exclude": [
-    "node_modules",
-    ".idea",
-    ".vscode",
-    ".vagrant",
-    "src/typings",
-    "bin",
-    "index.js",
-    "index.d.ts"
-  ]
+    "extends": "@tsconfig/node14/tsconfig.json",
+    "include": ["src"],
+    "compilerOptions": {
+        "rootDir": "src",
+        "outDir": "dist",
+        "declaration": true,
+        "sourceMap": true,
+        "incremental": true,
+        "declarationMap": true
+    }
 }
