--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "private": true,
   "name": "js-to-ts",
   "version": "0.0.1",
   "description": "Converts Javascript to Typescript",
@@ -7,11 +6,10 @@
   "homepage": "https://github.com/cspotcode/js-to-ts",
   "bugs": "https://github.com/cspotcode/js-to-ts/issues",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/cspotcode/js-to-ts.git"
+    "type": "git",
+    "url": "https://github.com/cspotcode/js-to-ts.git"
   },
-  "main": "index.js",
-  "typings": "index.d.ts",
+  "main": "./dist/index",
   "bin": "bin/cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,10 +21,19 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^1.8.10"
+    "typescript": "^4.3.4",
+    "@tsconfig/node14": "^1.0.1",
+    "@types/glob": "^7.1.3",
+    "@types/node": "^15.12.4",
+    "ts-node": "^10.0.0"
   },
   "dependencies": {
-    "lodash": "^4.13.1",
-    "source-map-support": "^0.4.0"
+    "clipanion": "^3.0.0-rc.12",
+    "glob": "^7.1.7",
+    "jscodeshift": "^0.12.0",
+    "lodash": "^4.17.21",
+    "recast": "^0.20.4",
+    "source-map-support": "^0.4.0",
+    "typanion": "^3.3.1"
   }
 }
