--- a/package.json
+++ b/package.json
@@ -21,19 +21,23 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@swc/core": "^1.2.139",
     "@tsconfig/node14": "^1.0.1",
+    "@types/glob": "^7.1.3",
+    "@types/jscodeshift": "^0.11.3",
     "@types/node": "^15.12.4",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.4",
-    "@types/glob": "^7.1.3"
+    "ts-expose-internals": "^4.5.5",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.3.4"
   },
   "dependencies": {
     "clipanion": "^3.0.0-rc.12",
     "glob": "^7.1.7",
-    "jscodeshift": "^0.12.0",
+    "jscodeshift": "^0.13.1",
     "lodash": "^4.17.21",
-    "recast": "^0.20.4",
+    "recast": "^0.20.5",
     "source-map-support": "^0.4.0",
+    "ts-morph": "^13.0.3",
     "typanion": "^3.3.1"
   }
 }
