--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "js-to-ts",
   "version": "0.0.1",
+  "type": "module",
   "description": "Converts Javascript to Typescript",
   "keywords": [],
   "homepage": "https://github.com/cspotcode/js-to-ts",
@@ -12,7 +13,8 @@
   "main": "./dist/index",
   "bin": "bin/cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "just": "./src/bin.ts"
   },
   "author": {
     "name": "Andrew Bradley",
@@ -31,13 +33,22 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@cspotcode/zx": "^5.0.3",
+    "@types/fs-extra": "^9.0.13",
+    "@types/lodash": "^4.14.178",
     "clipanion": "^3.0.0-rc.12",
+    "find-up": "^6.3.0",
+    "fs-extra": "^10.0.0",
     "glob": "^7.1.7",
     "jscodeshift": "^0.13.1",
     "lodash": "^4.17.21",
     "recast": "^0.20.5",
+    "shell-scripter": "github:cspotcode/node-shell",
     "source-map-support": "^0.4.0",
+    "strip-json-comments": "^4.0.0",
     "ts-morph": "^13.0.3",
+    "ts-node-esm": "github:cspotcode/ts-node-esm",
     "typanion": "^3.3.1"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
